--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,12 +1,20 @@
 .row {
   @mixin clearfix;
 
-  &--gutter {
+  &--gutters {
     margin-right: -65px;
   }
 
-  &--gutter > div {
+  &--gutters-large {
+    margin-right: -100px;
+  }
+
+  &--gutters > div {
     padding-right: 65px;
+  }
+
+  &--gutters-large > div {
+    padding-right: 100px;
   }
 
   &__b-margin-until-medium {
@@ -25,6 +33,11 @@
 
     &__medium-4--larger {
       width: 37%;
+    }
+
+    &__medium-6 {
+      float: left;
+      width: 50%;
     }
 
     &__medium-8 {
